<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryActivity"
    android:background="@color/main_blue"
    android:paddingTop="26dp">

        <ImageButton
            android:id="@+id/btn_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:background="@android:color/transparent"
            android:src="@drawable/icon_return"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/history"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingBottom="30dp"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <LinearLayout
                android:id="@+id/current_balance_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="25dp"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/current_balance_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/icon_current_balance" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginHorizontal="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/current_balance_string"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/current_balance"
                        android:textColor="@color/white"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/current_balance_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/current_balance_value"
                        android:textColor="@color/white"
                        android:textSize="16sp"/>
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/monthly_balance_sheet_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="25dp"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/monthly_balance_sheet_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_marginHorizontal="5dp"
                    android:src="@drawable/icon_monthly_balance_sheet" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/monthly_balance_sheet_string"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/monthly_balance_sheet"
                        android:textColor="@color/white"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/monthly_balance_sheet_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/monthly_balance_sheet_value"
                        android:textColor="@color/white"
                        android:textSize="16sp"/>
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>



        <TextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBottomOf="@id/info_container"/>

        <LinearLayout
            android:id="@+id/categorias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="0dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitle">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="5dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/color_alimentacao"
                    android:layout_width="15dp"
                    android:layout_height="19dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/color_food" />

                <TextView
                    android:id="@+id/alimentacao_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="5dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/color_transport" />

                <TextView
                    android:id="@+id/transporte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transport"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="5dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/color_residence" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/residence"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="5dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/color_leisure" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/leisure"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:id="@+id/categorias_formulario"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/card_rounded_shape"
        android:backgroundTint="@color/light_backgroud"
        android:orientation="vertical"
        android:paddingHorizontal="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categorias">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/empty_state_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:gravity="center"
                    android:text="@string/no_transactions"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:visibility="gone" />

            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>